homelab-gitops/apps/media/base/prowlarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: media
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prowlarr.thundertest.org
      secretName: prowlarr-tls
  rules:
    - host: prowlarr.thundertest.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 80
